test/Fail/Issue3823.err
Issue3823.agda:16.13-14: error: [NoSuchModule]
No module M in scope
when scope checking record { M }
